k8s/mattermost/mattermost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mattermost
  namespace: default
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: mattermost
  template: 
    metadata: 
      labels: 
        app: mattermost
    spec:
      containers: 
        - name: mattermost
          image: mattermost/mattermost-team-edition:latest
          ports: 
            - containerPort: 8065
