k8s/mattermost/mattermost-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mattermost
  namespace: mattermost-cluster
spec: 
  selector: 
    app: mattermost
  ports:
    - name: http
      port: 8065
      targetPort: 8065
    - name: metrics
      port: 8067
      targetPort: 8067
  type: ClusterIP
